--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -2,8 +2,8 @@
   font-family: "DMSans", system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  color: #2e2e48;
-  background-color: #ffffff;
+  color: var(--text-color);
+  background-color: var(--white-color);
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
