ref: css var colors added

--- a/src/assets/styles/variables.css
+++ b/src/assets/styles/variables.css
@@ -9,6 +9,7 @@
 
   --highlight-background: #efe2f9;
   --highlight-text: #9251f7;
+  --background-dark: #5531a7;
 
   --divider-color: #e2e6ee;
   --accent-color: #5d5fef;
