--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: 'DMSans', system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: var(--font-main);
   line-height: 1.5;
   font-weight: 400;
   color: var(--text-color);
